# simple-path-tracer-gl

./: Cargo.toml  README.md
scenes/: test_scene_00.json  test_scene_01.json
shaders/: post.frag  ray_tracing.comp  screen.vert
src/: main.rs
src/core/: bbox.rs  bvh.rs  material.rs  mesh.rs  mod.rs  triangle.rs
src/loader/: mod.rs
src/opengl/: context.rs  mod.rs  resource.rs  utils.rs
src/renderer/: mod.rs
src/uniforms/: bbox.rs  bvhnode.rs  camera.rs  light.rs  material.rs  mod.rs  object.rs  triangle.rs
