[package]
name = "simple-path-tracer-gl"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
glfw = "0.41"
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"
tobj = "3.2"
serde_json = "1.0"